--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <nav>
 
                 <a href="index.html ">
-                    <img src="img/logo.jpeg "></a>
+                <img src="https://i.ibb.co/PhYMS0b/logo.jpg"></a>
                 <div class="nav-links " id="nav-links">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
