--- a/course.html
+++ b/course.html
@@ -12,52 +12,55 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" </head>
 
     <body>
-
         <section class="sub-header ">
 
             <nav>
-                <ul>
+
+                <a href="index.html ">
+                <img src="https://i.ibb.co/PhYMS0b/logo.jpg"></a>
+                <div class="nav-links " id="nav-links">
+                    <i class="fa fa-times" onclick="hideMenu()"></i>
+                    <ul>
+                        <li>
+                            <a href="index.html ">HOME</a>
+                        </li>
+                    </ul>
+                    <ul>
+
+
+                        <li>
+                            <a href="about.html ">ABOUT</a>
+                        </li>
+                    </ul>
+
+                    <ul>
+
+
+                        <li>
+                            <a href="course.html ">COURSE</a>
+                        </li>
+                    </ul>
+
+                    <ul>
+
+
+                        <li>
+                            <a href="blog.html ">BLOG</a>
+                        </li>
+                    </ul>
+
+
+
+
                     <li>
-                        <a href="index.html ">HOME</a>
+                        <a href="contact.html ">CONTACT</a>
                     </li>
-                </ul>
-                <ul>
-                    <li>
-                        <a href="about.html ">ABOUT</a>
-                    </li>
-                </ul>
-
-                <ul>
-
-
-                    <li>
-                        <a href="course.html ">COURSE</a>
-                    </li>
-                </ul>
-
-                <ul>
-
-
-                    <li>
-                        <a href=" blog.html">BLOG</a>
-                    </li>
-                </ul>
-
-
-
-
-                <li>
-                    <a href=" contact.html">CONTACT</a>
-                </li>
-                </ul>
+                    </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i></nav>
-
-
-
-
-
         </section>
+
+        
         <section class="course">
             <h1> Courses We Offer</h1>
             <p>We Provide Free and Best Courses To Build Your Skills</p>
