--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         <section class="about-us">
             <div class="row">
                 <div class="about-col">
-                    <img src="img\aboutus.jpg">
+                    <img src="https://i.ibb.co/KG7XVg2/aboutus.jpg">
                     <h1>We are Word's largest University</h1>
                     <p>Lorem Ispum</p>
                     <a href=" " class="hero-btn">EXPLORE NOW</a></div>
