--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 </div>
 
                 <div class="internships-col ">
-                    <img src="https://i.ibb.co/2Z5vr5t/bangalore.jpg " class="city-img ">
+                  <img src="https://i.ibb.co/fN8FfRq/dellhi.jpg" > class="city-img ">
                     <div class="layer ">
                         <h3>DELHI</h3>
                     </div>
                 </div>
                 <div class="internships-col ">
-                    <img class="city-img " src="https://i.ibb.co/2Z5vr5t/bangalore.jpg ">
+                   <img src="https://i.ibb.co/gvvrqXZ/hyderabad.jpg">class="city-img">
                     <div class="layer ">
                         <h3>HYERABAD</h3>
                     </div>
@@ -127,20 +127,20 @@
             <p>We Provide Best Facilities To Enhace Your Skills</p>
             <div class="row ">
                 <div class="internships-col ">
-                    <img src="img/supportive material.jpg " class="city-img ">
+                <img src="https://i.ibb.co/ZSvs6Jv/supportive-material.jpg" class="city-img ">
                     <div class="layer ">
                         <h3>SUPPORTIVE MATERIALS</h3>
                     </div>
                 </div>
 
                 <div class="internships-col ">
-                    <img src="img/consulting.jpg " class=" city-img ">
+                   <img src="https://i.ibb.co/RNDX6c5/consulting.jpg" class=" city-img ">
                     <div class="layer ">
                         <h3>CONSULTING</h3>
                     </div>
                 </div>
                 <div class="internships-col ">
-                    <img src="img/strategy.jpg " class="city-img ">
+                 <img src="https://i.ibb.co/DGVXC3b/strategy.jpg"  class="city-img ">
                     <div class="layer ">
                         <h3>STRATEGY</h3>
                     </div>
