--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
             <p>An internship is the best way to put classroom knowledge to practice</p>
             <div class="row">
                 <div class="internships-col">
-                    <img src="https://i.ibb.co/2Z5vr5t/bangalore.jpg" class="city-img"> .internships-col { flex-basis: 32%; border-radius: 10px; margin-bottom: 30px; position: relative; overflow: hidden; display: block; } .internships-col img { width: 100px; height: 100px; float: left; object-fit:
-                        cover; } .layer { background: rgba(226, 0, 0, 0.7); height: 100%; width: 100%; position: absolute; top: 0; left: 0; transition: 0.5s; background: transparent; } .layer:hover { background: rgba(226, 0, 0.7); } .layer h3 { width: 100%;
-                        font-weight: 500; color: #fff; font-size: 26px; bottom: 0; left: 50%; transform: translateX(-50%); position: absolute; } .layer:hover h3 { bottom: 49%; opacity: 1; } .city-img { display: flex; width: 100%!important; } ">
+                    <img src="https://i.ibb.co/2Z5vr5t/bangalore.jpg" class="city-img"> 
                     <div class="layer ">
                         <h3>BANGALORE</h3>
                     </div>
