--- a/index.html
+++ b/index.html
@@ -151,14 +151,17 @@
         </section>
         <section class=" footer "><h4>ABOUT US</h4>
         <p>LOREM ISPUM DOLAR SIT AMET</p>
+            <div class="icons-pr">
         <div class="icons ">
             <i class="fa fa-facebook "></i>
             </div>
+              
             <div class=" icons ">
                 <i class=" fa fa-instagram "></i></div>
                 <div class=" icons ">
                     <i class=" fa fa-twitter "></i></div>
         </div>
+            </div>
         <p>Made By<i class="fa fa-heart-o "></i>WD</p>
         </section>
 
