--- a/index.html
+++ b/index.html
@@ -149,20 +149,21 @@
             <h1>ENROLL FOR COURSES</h1>
             <a href=" " class="hero-btn ">CONTACT US</a>
         </section>
-        <section class=" footer "><h4>ABOUT US</h4>
-        <p>LOREM ISPUM DOLAR SIT AMET</p>
-            <div class="icons-pr">
-        <div class="icons ">
-            <i class="fa fa-facebook "></i>
+        
+        <section class=" footer ">
+            <h4>ABOUT US</h4>
+            <p>LOREM ISPUM DOLAR SIT AMET</p>
+          <div class="icon-pr">
+            <div class=" icons ">
+                <i class="fa fa-facebook "></i>
             </div>
-              
             <div class=" icons ">
                 <i class=" fa fa-instagram "></i></div>
-                <div class=" icons ">
-                    <i class=" fa fa-twitter "></i></div>
-        </div>
+            <div class=" icons ">
+                <i class=" fa fa-twitter "></i></div>
+          </div>
             </div>
-        <p>Made By<i class="fa fa-heart-o "></i>WD</p>
+            <p>Made By<i class="fa fa-heart-o "></i>WD</p>
         </section>
 
         <script>
